--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.6.16",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
