--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vitejs/plugin-vue": "4.0.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
+    "qrcode.vue": "^3.3.3",
     "sweetalert2": "^11.6.16",
-    "@vitejs/plugin-vue": "4.0.0",
     "vite": "^4.0.3",
     "vue": "^3.2.13",
+    "vue-qrcode-reader": "3.1.0-vue3-compatibility.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
