--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
+    "leaflet": "^1.9.3",
     "qrcode.vue": "^3.3.3",
     "sweetalert2": "^11.6.16",
     "vite": "^4.0.3",
