update README.md and .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 DB_PASSWORD=password
 DB_DATABASE=punchin_sequelize
-JWT_SECRET=
+JWT_SECRET=secret
 SESSION_SECRET=thisIsASecret
 AUTH_EMAIL=
 AUTH_PASSWORD=
